--- a/pom.xml
+++ b/pom.xml
@@ -6,31 +6,31 @@
 
     <name>DeepaMehta 4 Kiezatlas</name>
     <groupId>de.kiezatlas</groupId>
-    <artifactId>dm44-kiezatlas</artifactId>
-    <version>2.1.6</version>
+    <artifactId>dm47-kiezatlas</artifactId>
+    <version>2.1.7-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <parent>
         <groupId>de.deepamehta</groupId>
         <artifactId>deepamehta-plugin-parent</artifactId>
-        <version>4.4</version>
+        <version>4.7</version>
     </parent>
 
     <dependencies>
         <dependency>
             <groupId>de.deepamehta</groupId>
             <artifactId>deepamehta-geomaps</artifactId>
-            <version>4.4</version>
+            <version>4.7</version>
         </dependency>
         <dependency>
             <groupId>de.deepamehta</groupId>
             <artifactId>deepamehta-facets</artifactId>
-            <version>4.4</version>
+            <version>4.7</version>
         </dependency>
         <dependency>
             <groupId>de.deepamehta</groupId>
             <artifactId>deepamehta-accesscontrol</artifactId>
-            <version>4.4</version>
+            <version>4.7</version>
         </dependency>
     </dependencies>
 
