Added Migration3: Assigning types to System

--- a/src/main/resources/plugin.properties
+++ b/src/main/resources/plugin.properties
@@ -1,2 +1,2 @@
-requiredPluginMigrationNr=2
-importModels=de.deepamehta.webclient, de.deepamehta.contacts
+requiredPluginMigrationNr=3
+importModels=de.deepamehta.webclient,de.deepamehta.contacts,de.deepamehta.accesscontrol,de.deepamehta.workspaces
