--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>deepamehta-accesscontrol</artifactId>
             <version>4.7</version>
         </dependency>
+        <dependency>
+            <groupId>de.deepamehta</groupId>
+            <artifactId>deepamehta-workspaces</artifactId>
+            <version>4.7</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -46,6 +51,14 @@
                             de.kiezatlas.KiezatlasPlugin
                         </Bundle-Activator>
                     </instructions>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
                 </configuration>
             </plugin>
         </plugins>
