--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <name>DeepaMehta 4 Kiezatlas</name>
     <groupId>de.kiezatlas</groupId>
     <artifactId>dm47-kiezatlas</artifactId>
-    <version>2.1.7-SNAPSHOT</version>
+    <version>2.1.7</version>
     <packaging>bundle</packaging>
 
     <parent>
