Fixing timestamps and added a new reporting method.

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
         </dependency>
         <dependency>
             <groupId>de.deepamehta</groupId>
+            <artifactId>deepamehta-time</artifactId>
+            <version>4.7</version>
+        </dependency>
+        <dependency>
+            <groupId>de.deepamehta</groupId>
             <artifactId>deepamehta-accesscontrol</artifactId>
             <version>4.7</version>
         </dependency>
