--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,13 @@
     <name>DeepaMehta 4 Kiezatlas</name>
     <groupId>de.kiezatlas</groupId>
     <artifactId>dm48-kiezatlas</artifactId>
-    <version>2.1.8</version>
+    <version>2.1.9-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <parent>
         <groupId>de.deepamehta</groupId>
         <artifactId>deepamehta-plugin</artifactId>
-        <version>4.8.2</version>
+        <version>4.8.3-SNAPSHOT</version>
     </parent>
 
     <!-- Attention: Before using this: `mvn clean package` will remove _all_ dm4-kiezatlas* jars
@@ -26,32 +26,32 @@
         <dependency>
             <groupId>de.deepamehta</groupId>
             <artifactId>deepamehta-geomaps</artifactId>
-            <version>4.8.2</version>
+            <version>4.8.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>de.deepamehta</groupId>
             <artifactId>deepamehta-facets</artifactId>
-            <version>4.8.2</version>
+            <version>4.8.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>de.deepamehta</groupId>
             <artifactId>deepamehta-time</artifactId>
-            <version>4.8.2</version>
+            <version>4.8.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>de.deepamehta</groupId>
             <artifactId>deepamehta-accesscontrol</artifactId>
-            <version>4.8.2</version>
+            <version>4.8.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>de.deepamehta</groupId>
             <artifactId>deepamehta-workspaces</artifactId>
-            <version>4.8.2</version>
+            <version>4.8.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>de.deepamehta</groupId>
             <artifactId>deepamehta-contacts</artifactId>
-            <version>4.8.2</version>
+            <version>4.8.3-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
