--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <name>DeepaMehta 4 Kiezatlas</name>
     <groupId>de.kiezatlas</groupId>
     <artifactId>dm48-kiezatlas</artifactId>
-    <version>2.1.8</version>
+    <version>2.1.9-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <parent>
